2016-04-02 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/calibration/calibrate.c: added a calibration through a
	  Kalman filter.

2016-03-31 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/calibration/calibrate.c: save the scheduling latencies
	  in nanoseconds, to make it easier their editing.
	* base/sched/sched.c: echo diagnose of the scheduling latencies in 
	  nanoseconds, to make it easier their reading; be sure of the kernel 
	  thread server end at rmmod rtai_sched.

2016-03-30 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/calibration/calibrate.c: rewrite user space support
	  for calibrating scheduling latencies on the fly.
	* base/include/rtai_lxrt.h: recast the kernel_calibrator function 
	  as a simple interface to provide kernel and user space latencies,
	  in clock count units.
	* base/include/rtai_sched.h: add per task calibrated latency variable.
	* base/include/rtai_schedcore.h: wake up timed tasks, immediately 
	  accounting for the available per task schedling latency.
	* base/sched/sched.c: rework the all kernel/user space self calibration
	  stuff.
	* base/sched/sys.c: recast the kernel_calibrator function as a simple
	  interface to provide kernel and user space latencies, in clock count
	  units.

2016-03-29 Paolo Mantegazza <mantegazza@aero.polimi.it>
	   Pierangelo Masarati <pierangelo.masarati@polimi.it>

	* base/arch/x86/Kconfig and configure.in: removed old self
	  calibration parameters, substituted with the new ones,
	  i.e.: self calibration period and time.
	* base/sched/GNUmakefile.am: removed old self calibration
	  stuff
	* base/include/rtai_defs.h.in and base/include/GNUmakefile.am:
	  generate macro for installation path

2016-03-28 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* testsuite/user/latency.c: reworked heading lines and added chache 
          warmup.
	* testsuite/kthreads/display.c and latency.c: reworked heading lines 
          and added chache warmup.