@@ -731,8 +731,8 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-@CONFIG_KBUILD_FALSE@distclean-local:
 @CONFIG_KBUILD_FALSE@clean-local:
+@CONFIG_KBUILD_FALSE@distclean-local:
 clean: clean-am
 
 clean-am: clean-calibrationPROGRAMS clean-generic clean-libtool \
