@@ -38,8 +38,8 @@ CONFIG_RTAI_CPUS="2"
 #
 # CONFIG_RTAI_SCHED_ISR_LOCK is not set
 # CONFIG_RTAI_LONG_TIMED_LIST is not set
-CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD="200000"
-CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME="1"
+CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ="5000"
+CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES="5000"
 CONFIG_RTAI_SCHED_LXRT_NUMSLOTS="150"
 CONFIG_RTAI_MONITOR_EXECTIME=y
 CONFIG_RTAI_ALLOW_RR=y
