@@ -555,8 +555,8 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-@CONFIG_KBUILD_FALSE@clean-local:
 @CONFIG_RTAI_MATH_BUILTIN_TRUE@install-exec-local:
+@CONFIG_KBUILD_FALSE@clean-local:
 clean: clean-am
 
 clean-am: clean-generic clean-libtool clean-local \
