@@ -724,30 +724,30 @@ AC_ARG_ENABLE(latency-self-calibration-period,
 	[ --enable-latency-self-calibration-period	Set latency self calibration period],
 	[case "$enableval" in
  changequote(,)dnl
-	[0-9]*) CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD=$enableval ;;
+	[0-9]*) CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ=$enableval ;;
  changequote([,])dnl
 	*) AC_MSG_ERROR([Bad argument to option: --enable-latency-self-calibration-period=<nanoseconds>]) ;;
 	esac])
-if test x$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD = x ; then
+if test x$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ = x ; then
   # Use a reasonable default if unset
-  CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD=100000
+  CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ=5000
 fi
-AC_MSG_RESULT($CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD)
+AC_MSG_RESULT($CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ)
 
 AC_MSG_CHECKING(for latency self calibration time)
 AC_ARG_ENABLE(latency-self-calibration-time,
 	[ --enable-latency-self-calibration-time	Set latency self calibration time],
 	[case "$enableval" in
  changequote(,)dnl
-	[0-9]*) CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME=$enableval ;;
+	[0-9]*) CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES=$enableval ;;
  changequote([,])dnl
 	*) AC_MSG_ERROR([Bad argument to option: --enable-latency-self-calibration-time=<seconds>]) ;;
 	esac])
-if test x$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME = x ; then
+if test x$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES = x ; then
   # Use a reasonable default if unset
-  CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME=1
+  CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES=5000
 fi
-AC_MSG_RESULT($CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME)
+AC_MSG_RESULT($CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES)
 
 AC_MSG_CHECKING(for user busy align ret delay)
 AC_ARG_ENABLE(user-busy-align-ret-delay,
@@ -1503,8 +1503,8 @@ test x$CONFIG_RTAI_SCHED_ISR_LOCK = xy && AC_DEFINE(CONFIG_RTAI_SCHED_ISR_LOCK,1
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_RTC_FREQ,$CONFIG_RTAI_RTC_FREQ,[Kconfig])
 test x$CONFIG_RTAI_LONG_TIMED_LIST = xy && AC_DEFINE(CONFIG_RTAI_LONG_TIMED_LIST,1,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_8254_LATENCY,$CONFIG_RTAI_SCHED_8254_LATENCY,[Kconfig])
-AC_DEFINE_UNQUOTED(CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD,$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD,[Kconfig])
-AC_DEFINE_UNQUOTED(CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME,$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME,[Kconfig])
+AC_DEFINE_UNQUOTED(CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ,$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ,[Kconfig])
+AC_DEFINE_UNQUOTED(CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES,$CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_LXRT_NUMSLOTS,$CONFIG_RTAI_SCHED_LXRT_NUMSLOTS,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_RTDM_FD_MAX,$CONFIG_RTAI_RTDM_FD_MAX,[Kconfig])
 test x$CONFIG_RTAI_RTDM_SHIRQ = xy && AC_DEFINE(CONFIG_RTAI_RTDM_SHIRQ,1,[Kconfig])
