@@ -103,10 +103,10 @@
 #undef CONFIG_RTAI_KSTACK_HEAPSZ
 
 /* Kconfig */
-#undef CONFIG_RTAI_LATENCY_SELF_CALIBRATION_PERIOD
+#undef CONFIG_RTAI_LATENCY_SELF_CALIBRATION_CYCLES
 
 /* Kconfig */
-#undef CONFIG_RTAI_LATENCY_SELF_CALIBRATION_TIME
+#undef CONFIG_RTAI_LATENCY_SELF_CALIBRATION_FREQ
 
 /* Kconfig */
 #undef CONFIG_RTAI_LEDS
